# raiveFlier

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATED_PROMPTS_RAIVEFLIER.html  CLAUDE.md  Dockerfile  NAVIGATION.md  RAG_PIPELINE_PLAN.md  README.html  dir_index.html  pyproject.toml  render.yaml  requirements-dev.txt  requirements-feeder.txt  requirements.txt
config/: config.yaml  dir_index.html  logging.yaml
data/rbma_scrape/: discovered_articles_urls.json  discovered_lectures_urls.json  rbma_progress.json
data/reference_corpus/: detroit_techno_chicago_house.txt  genres_subgenres.txt  labels_promoters_flier_culture.txt  major_djs_artists.txt  ra_events_brussels.txt  ra_events_chicago.txt  ra_events_cologne.txt  ra_events_detroit.txt  ra_events_ibiza.txt  ra_events_minneapolis.txt  ra_events_san_francisco.txt  ra_events_wisconsin.txt  (+15 more)
deliverables/: error_log_analysis_storage.html  session_summary_analysis_storage.html
docs/: raiveFlier_presentation.html  raiveFlier_presentation_print.html  raiveFlier_video_script.html
frontend/: dir_index.html  index.html
next_steps/: analysis_storage_next_steps.html  dir_index.html  remaining_optimizations_prompt.html  run_next_steps.txt
scripts/: batch_ingest.py  entrypoint.sh  ingest_transcripts.py  package_corpus.sh  post_scrape_ingest.sh  rebuild_corpus.py  reingest_ra_events.py  scrape_status.sh  transcribe_ra_exchange.py
src/: dir_index.html  main.py
stories_frontend/: index.html
tests/: conftest.py  dir_index.html  test_rating_system.py
tools/: __init__.py  dir_index.html
(+792 files in other folders)
